--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,7 @@
     }
 
     .container-project{
+        margin-left: 10px;
         width: 100%;
         text-align: center;
         line-height: 75px;
@@ -108,10 +109,7 @@
 
     .container-project::hover {
         background-image: linear-gradient(rgba(0,0,0,.65),rgba(0,0,0,.05));
-
     }
-
-
 
     .header-content h1{
         font-weight: 700;
@@ -153,37 +151,34 @@
     }
 
     .header-content-project{
-        display: flex;
-        height: 700px;
-        background-color: #f5f5f5;
+         display: flex;
+        /* height: 100px; */
+        background-color: #ffffff; 
         align-items: flex-start;
-        align-content: space-around;
+        align-content: space-around; 
         justify-content: space-between ;
     }
 
     .contact{
-        background-color: #4f646f;
-        
+        background-image: linear-gradient(rgba(0,0,0,.65),rgba(0,0,0,.05)),url("../image/systemdesign.png");
     }
 
     html,body{
         height: 100%;
-        
     }
 
     .wrapper{
-        min-height: 100%;
+        height: 100%;
         display: flex;
         flex-direction: column;
+        /* background-color: #ffffff; */
     }
 
-
-
     .row{
-        background: #f4f4f4;
+        background: #ffffff;
         padding: 10rem 10rem;
         background-size: cover;
-        /*  border: 10px solid red; */
+        /* border: 10px solid red; */
     }
 
     .row1{
@@ -196,24 +191,23 @@
     }
 
     .row1-project{
-        height: 300px;
+        /* height: 300px;
         box-shadow: 0px 0px 20px #aaa;
-        
-        background: #fff;
+        /* background: #fff; */
         transition: transform .2s;
-        background-position: center;
+        /* background-position: center;
         background-size: cover;
         width: 100px;
         text-align: center;
-  
-        font-size: 30px;
+        font-size: 30px; */ 
     }
 
     .row1-project:hover {
-        transform: scale(1.1);
+        transform: scale(1.04); 
     }
 
     .row1 .img-box{
+        box-sizing: border-box;
         float: left;
         width: 50%;
         height: 100%;
@@ -226,6 +220,7 @@
         height: 100%;
         background-size: cover;
     }
+
     .row2{
         height: 300px;
         box-shadow: 0px 0px 20px #aaa;
@@ -275,8 +270,6 @@
         background-position: center;
         background-size: cover;
     }
-    
-    
 
     .row1 .img-box img{
         display: inline-block;
@@ -286,13 +279,14 @@
     }
 
     .row1-project .img-box img{
-        display: inline-block;
+        height: 300px;
+        width: 390px;
+        /* display: inline-block; */
         margin: 10px;
         border-radius: 5%;
         padding: 20 %;
-        border: 20px solid red;
-        height: 100%;
-
+        border: 2px solid black;
+        
     }
 
     .row2 .img-box img{
@@ -303,7 +297,6 @@
     }
     .lg-heading{
         font-size: 2.75em;
-        
     }
 
     .lg-heading.contact{
